--- a/aspnet-core/host/Lion.AbpSuite.HttpApi.Host/appsettings.Production.json
+++ b/aspnet-core/host/Lion.AbpSuite.HttpApi.Host/appsettings.Production.json
@@ -34,14 +34,14 @@
     "CorsOrigins": "http://localhost:81,http://116.205.177.85:81,http://116.205.177.85:81/"
   },
   "ConnectionStrings": {
-    "Default": "Data Source=mysql;Port=3306;Database=LionAbpSuiteDB;uid=root;pwd=1q2w3E*;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true"
+    "Default": "Data Source=192.168.1.8;Initial Catalog=XSXABPVnextSuite;User Id=sa;Password=aA123456;"
   },
   "Redis": {
-    "Configuration": "redis,password=1q2w3E*,defaultdatabase=1"
+    "Configuration": "192.168.8.6,defaultdatabase=1,abortConnect=false"
   },
   "Hangfire": {
     "Redis": {
-      "Host": "redis,password=1q2w3E*",
+      "Host": "192.168.8.6,abortConnect=false",
       "DB": 5
     }
   },
@@ -54,18 +54,18 @@
   "Cap": {
     "Enabled": true,
     "RabbitMq": {
-      "HostName": "rabbitmq",
+      "HostName": "192.168.8.6",
       "Port": 5672,
       "UserName": "admin",
       "Password": "1q2w3E*"
     }
   },
   "ElasticSearch": {
-    "Enabled": false,
-    "Url": "http://es.cn",
+    "Enabled": true,
+    "Url": "https://192.168.8.6:9200/",
     "IndexFormat": "Lion.AbpSuite.development.{0:yyyy.MM.dd}",
     "UserName": "elastic",
-    "Password": "aVVhjQ95RP7nbwNy",
+    "Password": "1q2w3E*",
     "SearchIndexFormat": "Lion.AbpSuite.production*"
   }
 }
