--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -34,8 +34,9 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: registry.cn-hangzhou.aliyuncs.com
+          username: ${{ secrets.Ali_USERNAME }}
+          password: ${{ secrets.Ali_PASSWORD }}
 
       # 设置 docker 环境
       - name: Set up Docker Buildx
@@ -47,14 +48,14 @@ jobs:
         with:
           context: aspnet-core/host/Lion.AbpSuite.HttpApi.Host
           push: true
-          tags: zzzwangjun/lion.abp.suite:${{ steps.vars.outputs.RELEASE_VERSION }}
+          tags: registry.cn-hangzhou.aliyuncs.com/xishxu/XSXSuiteHost:${{ steps.vars.outputs.RELEASE_VERSION }}
 
       - name: Push Lion.AbpSuite.DbMigrator Image
         uses: docker/build-push-action@v2
         with:
           context: aspnet-core/src/Lion.AbpSuite.DbMigrator
           push: true
-          tags: zzzwangjun/lion.abp.suite.migrator:${{ steps.vars.outputs.RELEASE_VERSION }}
+          tags: registry.cn-hangzhou.aliyuncs.com/xishxu/XSXSuiteMigrator:${{ steps.vars.outputs.RELEASE_VERSION }}
 
   vben28:
     runs-on: ubuntu-latest
@@ -84,8 +85,9 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: registry.cn-hangzhou.aliyuncs.com
+          username: ${{ secrets.Ali_USERNAME }}
+          password: ${{ secrets.Ali_PASSWORD }}
 
       # 设置 docker 环境
       - name: Set up Docker Buildx
@@ -97,4 +99,4 @@ jobs:
         with:
           context: vben28
           push: true
-          tags: zzzwangjun/lion.abp.suite.vben28:${{ steps.vars.outputs.RELEASE_VERSION }}
+          tags: registry.cn-hangzhou.aliyuncs.com/xishxu/XSXSuiteVben:${{ steps.vars.outputs.RELEASE_VERSION }}
