--- a/aspnet-core/host/Lion.AbpSuite.HttpApi.Host/appsettings.json
+++ b/aspnet-core/host/Lion.AbpSuite.HttpApi.Host/appsettings.json
@@ -34,16 +34,15 @@
     "CorsOrigins": "https://*.AbpSuite.com,http://localhost:4200,http://localhost:3100"
   },
   "ConnectionStrings": {
-    "Default": "Data Source=localhost;Port=3306;Database=LionAbpSuiteDB;uid=root;pwd=1q2w3E*;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true"
+    "Default": "Data Source=192.168.1.8;Initial Catalog=XSXABPVnextSuite;User Id=sa;Password=aA123456;Encrypt=True;TrustServerCertificate=True;"
   },
   "Hangfire": {
     "Redis": {
-      "Host": "localhost,password=1q2w3E*",
-      "DB": "2"
+      "Host": "192.168.8.6,defaultdatabase=1,abortConnect=false"
     }
   },
   "Redis": {
-    "Configuration": "localhost,password=1q2w3E*,defaultdatabase=1"
+    "Configuration": "192.168.8.6,defaultdatabase=1,abortConnect=false"
   },
   "Jwt": {
     "Audience": "Lion.AbpSuite",
@@ -52,11 +51,11 @@
     "ExpirationTime": 2
   },
   "ElasticSearch": {
-    "Enabled": "false",
-    "Url": "http://es.cn",
+    "Enabled": true,
+    "Url": "https://192.168.8.6:9200/",
     "IndexFormat": "Lion.AbpSuite.development.{0:yyyy.MM.dd}",
     "UserName": "elastic",
-    "Password": "aVVhjQ95RP7nbwNy",
-    "SearchIndexFormat": "Lion.AbpSuite.development*"
+    "Password": "1q2w3E*",
+    "SearchIndexFormat": "Lion.AbpSuite.production*"
   }
 }
