--- a/aspnet-core/src/Lion.AbpSuite.EntityFrameworkCore/Lion.AbpSuite.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/Lion.AbpSuite.EntityFrameworkCore/Lion.AbpSuite.EntityFrameworkCore.csproj
@@ -8,15 +8,15 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Lion.AbpSuite.Domain\Lion.AbpSuite.Domain.csproj" />
-        <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" />
+        <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" />
         <PackageReference Include="Humanizer.Core.zh-Hans" />
         <PackageReference Include="Lion.AbpPro.BasicManagement.EntityFrameworkCore" />
         <PackageReference Include="Lion.AbpPro.NotificationManagement.EntityFrameworkCore" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-            <PrivateAssets>compile; contentFiles; build; buildMultitargeting; buildTransitive; analyzers; native</PrivateAssets>
+            <PrivateAssets>compile; build; native; contentfiles; analyzers; buildtransitive</PrivateAssets>
         </PackageReference>
     </ItemGroup>
 </Project>
