--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -31,7 +31,7 @@ jobs:
         run: echo ::set-output name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
 
       # docker login
-      - name: Login to Docker Hub
+      - name: Login to aliyun
         uses: docker/login-action@v1
         with:
           registry: registry.cn-hangzhou.aliyuncs.com
@@ -82,7 +82,7 @@ jobs:
         run: echo ::set-output name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
 
       # docker login
-      - name: Login to Docker Hub
+      - name: Login to aliyun
         uses: docker/login-action@v1
         with:
           registry: registry.cn-hangzhou.aliyuncs.com
