--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -31,12 +31,11 @@ jobs:
         run: echo ::set-output name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
 
       # docker login
-      - name: Login to aliyun
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: registry.cn-hangzhou.aliyuncs.com
-          username: ${{ secrets.Ali_USERNAME }}
-          password: ${{ secrets.Ali_PASSWORD }}
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
 
       # 设置 docker 环境
       - name: Set up Docker Buildx
@@ -48,14 +47,14 @@ jobs:
         with:
           context: aspnet-core/host/Lion.AbpSuite.HttpApi.Host
           push: true
-          tags: registry.cn-hangzhou.aliyuncs.com/xishxu/XSXSuiteHost:${{ steps.vars.outputs.RELEASE_VERSION }}
+          tags: xishxu/xsx.suite.host:${{ steps.vars.outputs.RELEASE_VERSION }}
 
       - name: Push Lion.AbpSuite.DbMigrator Image
         uses: docker/build-push-action@v2
         with:
           context: aspnet-core/src/Lion.AbpSuite.DbMigrator
           push: true
-          tags: registry.cn-hangzhou.aliyuncs.com/xishxu/XSXSuiteMigrator:${{ steps.vars.outputs.RELEASE_VERSION }}
+          tags: xishxu/xsx.suite.migrator:${{ steps.vars.outputs.RELEASE_VERSION }}
 
   vben28:
     runs-on: ubuntu-latest
@@ -82,12 +81,11 @@ jobs:
         run: echo ::set-output name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
 
       # docker login
-      - name: Login to aliyun
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: registry.cn-hangzhou.aliyuncs.com
-          username: ${{ secrets.Ali_USERNAME }}
-          password: ${{ secrets.Ali_PASSWORD }}
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
 
       # 设置 docker 环境
       - name: Set up Docker Buildx
@@ -99,4 +97,4 @@ jobs:
         with:
           context: vben28
           push: true
-          tags: registry.cn-hangzhou.aliyuncs.com/xishxu/XSXSuiteVben:${{ steps.vars.outputs.RELEASE_VERSION }}
+          tags: xishxu/xsx.suite.vben:${{ steps.vars.outputs.RELEASE_VERSION }}
