--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -31,11 +31,12 @@ jobs:
         run: echo ::set-output name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
 
       # docker login
-      - name: Login to Docker Hub
+      - name: Login to aliyun
         uses: docker/login-action@v1
         with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: registry.cn-hangzhou.aliyuncs.com
+          username: ${{ secrets.Ali_USERNAME }}
+          password: ${{ secrets.Ali_PASSWORD }}
 
       # 设置 docker 环境
       - name: Set up Docker Buildx
@@ -47,14 +48,14 @@ jobs:
         with:
           context: aspnet-core/host/Lion.AbpSuite.HttpApi.Host
           push: true
-          tags: xishxu/xsx.suite.host:${{ steps.vars.outputs.RELEASE_VERSION }}
+          tags: registry.cn-hangzhou.aliyuncs.com/xishxu/XSXSuiteHost:${{ steps.vars.outputs.RELEASE_VERSION }}
 
       - name: Push Lion.AbpSuite.DbMigrator Image
         uses: docker/build-push-action@v2
         with:
           context: aspnet-core/src/Lion.AbpSuite.DbMigrator
           push: true
-          tags: xishxu/xsx.suite.migrator:${{ steps.vars.outputs.RELEASE_VERSION }}
+          tags: registry.cn-hangzhou.aliyuncs.com/xishxu/XSXSuiteMigrator:${{ steps.vars.outputs.RELEASE_VERSION }}
 
   vben28:
     runs-on: ubuntu-latest
@@ -81,11 +82,12 @@ jobs:
         run: echo ::set-output name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
 
       # docker login
-      - name: Login to Docker Hub
+      - name: Login to aliyun
         uses: docker/login-action@v1
         with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: registry.cn-hangzhou.aliyuncs.com
+          username: ${{ secrets.Ali_USERNAME }}
+          password: ${{ secrets.Ali_PASSWORD }}
 
       # 设置 docker 环境
       - name: Set up Docker Buildx
@@ -97,4 +99,4 @@ jobs:
         with:
           context: vben28
           push: true
-          tags: xishxu/xsx.suite.vben:${{ steps.vars.outputs.RELEASE_VERSION }}
+          tags: registry.cn-hangzhou.aliyuncs.com/xishxu/XSXSuiteVben:${{ steps.vars.outputs.RELEASE_VERSION }}
