--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install Dotnet 7.0.102
+      - name: Install Dotnet 7.x
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 7.0.x
@@ -31,12 +31,12 @@ jobs:
         run: echo ::set-output name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
 
       # docker login
-      - name: Login to Docker Hub
+      - name: Login to Ali
         uses: docker/login-action@v1
         with:
           registry: registry.cn-hangzhou.aliyuncs.com
-          username: ${{ secrets.Ali_USERNAME }}
-          password: ${{ secrets.Ali_PASSWORD }}
+          username: ${{ secrets.ALI_USERNAME }}
+          password: ${{ secrets.ALI_PASSWORD }}
 
       # 设置 docker 环境
       - name: Set up Docker Buildx
@@ -59,6 +59,7 @@ jobs:
 
   vben28:
     runs-on: ubuntu-latest
+    needs: api
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.1
@@ -81,12 +82,12 @@ jobs:
         run: echo ::set-output name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
 
       # docker login
-      - name: Login to Docker Hub
+      - name: Login to Ali
         uses: docker/login-action@v1
         with:
           registry: registry.cn-hangzhou.aliyuncs.com
-          username: ${{ secrets.Ali_USERNAME }}
-          password: ${{ secrets.Ali_PASSWORD }}
+          username: ${{ secrets.ALI_USERNAME }}
+          password: ${{ secrets.ALI_PASSWORD }}
 
       # 设置 docker 环境
       - name: Set up Docker Buildx
