--- a/aspnet-core/host/Lion.AbpSuite.HttpApi.Host/appsettings.Production.json
+++ b/aspnet-core/host/Lion.AbpSuite.HttpApi.Host/appsettings.Production.json
@@ -34,7 +34,7 @@
     "CorsOrigins": "http://localhost:81,http://116.205.177.85:81,http://116.205.177.85:81/"
   },
   "ConnectionStrings": {
-    "Default": "Data Source=192.168.1.8;Initial Catalog=XSXABPVnextSuite;User Id=sa;Password=aA123456;"
+    "Default": "Data Source=192.168.1.8;Initial Catalog=XSXABPVnextSuite;User Id=sa;Password=aA123456;Encrypt=True;TrustServerCertificate=True;"
   },
   "Redis": {
     "Configuration": "192.168.8.6,defaultdatabase=1,abortConnect=false"
