--- a/aspnet-core/src/Lion.AbpSuite.DbMigrator/appsettings.Production.json
+++ b/aspnet-core/src/Lion.AbpSuite.DbMigrator/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=192.168.1.8;Initial Catalog=XSXABPVnextSuite;User Id=sa;Password=aA123456;"
+    "Default": "Data Source=192.168.1.8;Initial Catalog=XSXABPVnextSuite;User Id=sa;Password=aA123456;Encrypt=True;TrustServerCertificate=True;"
   }
 }
